objects/KCSArticle_VoteStat__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedScore__c</fullName>
        <label>NormalizedScore</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Parent ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KCSArticle_VoteStat__c</label>
    <nameField>
        <label>KCSArticle_VoteStat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_VoteStat__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>